[package]
name = "boojum-sha256"
version = "0.1.0"
edition = "2021"

[dependencies]
boojum = { git = "https://github.com/matter-labs/era-boojum.git", branch = "main", version = "0.1.0" }
serde_json = "1.0.108"
bincode = "1.3.3"
zkevm_test_harness = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.4.0", version = "1.4.0" }
circuit_definitions = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.4.0", version = "0.1.0" }
dotenv = "0.15.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
